RESOLVED FIXED309544
REGRESSION (260067@main): Tabbing position lost when button is disabled
https://bugs.webkit.org/show_bug.cgi?id=309544
Summary REGRESSION (260067@main): Tabbing position lost when button is disabled
Aditya Keerthi
Reported 2026-03-09 20:28:36 PDT
Attachments
Aditya Keerthi
Comment 1 2026-03-09 20:37:17 PDT
Aditya Keerthi
Comment 2 2026-03-10 07:47:22 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58396
EWS
Comment 3 2026-03-10 10:04:33 PDT
Committed 308991@main (487ec443bd23): <https://commits.webkit.org/308991@main> Reviewed commits have been landed. Closing PR #60245 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.